# algo-trading

./: .gitignore  run_trading.sh  tmux.txt
fsvzo/: main.py
fsvzo/paper_state/: equity.csv  portfolio_state.json  positions.json  trades.csv
mean_reversion/: README.md  backtest.py  config.yaml  forward.py  strategy.py  universe.py
mean_reversion/data/: DEMO_5m.csv
mean_reversion/logs/: forward_equity_COIN50.csv
momentum/: README.md  backtest.py  config.yaml  forward.py  requirements.txt  strategy.py  universe.py
momentum/data/: DEMO_5m.csv
momentum_v2/: README.md  backtest.py  config.yaml  forward_trendedge.py  log.csv  pyproject.toml  requirements.txt  strategy.py  universe.py
momentum_v2/examples/: BTCUSDT_1h_sample.csv
momentum_v2/tests/: test_smoke.py
momentum_v2/trendedge/: backtest.py  cli.py  data.py  entries.py  execution.py  forward_trendege.py  indicators.py  params.py  regimes.py  risk.py
triple_ema/: README.md  backtest.py  config.yaml  forward.py  strategy.py
triple_ema/data/: DEMO_5m.csv
triple_ema/logs/: forward_equity_COIN50.csv  forward_trades_COIN50.csv
