
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trendedge"
version = "0.1.0"
description = "Robust trend-following breakout strategy package with symmetric entries, ATR sizing, guardrails, and realistic backtesting."
authors = [{name = "DField Solutions"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.23.0",
  "scipy>=1.9.0"
]

[project.scripts]
trendedge = "trendedge.cli:main"
